# Robotics-Playbook

./: .gitignore  README.md
Coding-Lab/Sprint-01/: CMakeLists.txt  README.md
Coding-Lab/Sprint-01/include/: transform2D.h  transform3D.h
Coding-Lab/Sprint-01/src/: main.cpp  transform2D.cpp  transform3D.cpp
Knowledge-Base/Estimation/: Bayes-filter-and-Kalmen-filter.md  EKF.md  Gaussian-And-Sensor-Fusion.md  Sprint-2-Master-Review.md
Knowledge-Base/Mathematics/: Euler-Angles.md  Quaternions.md  Rotation-Matrices.md  SE2.md  SE3.md
Resources/Books/Probabilistic-Robotics/: README.md  reading-log.md
Resources/Documentatin/ROS2/: TF2-Concepts.md
Sprint-Reviews/: Sprint-01.md  Sprint-2-Review.md
